Refactor AI DTO classes to use final classes with explicit constructors and getters for better encapsulation.